--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="col-md-4">
       <div class="card yoga-card h-100">
         <a href="trainers.html">
-          <img src="images/yoga.png" class="img-fluid rounded" alt="Yoga class">
+          <img src="yoga.png" class="img-fluid rounded" alt="Yoga class">
         </a>
         <div class="card-body">
           <h3 class="h5">Yoga</h3>
@@ -89,7 +89,7 @@
     <div class="col-md-4">
       <div class="card zumba-card h-100">
         <a href="trainers.html">
-          <img src="images/zumba.png" class="img-fluid rounded" alt="Zumba Dance Class">
+          <img src="zumba.png" class="img-fluid rounded" alt="Zumba Dance Class">
         </a>
         <div class="card-body">
           <h3 class="h5">Zumba</h3>
@@ -102,7 +102,7 @@
     <div class="col-md-4">
       <div class="card pt-card h-100">
         <a href="trainers.html">
-          <img src="images/personal-training.png" class="img-fluid rounded" alt="Personal Training Session">
+          <img src="personal-training.png" class="img-fluid rounded" alt="Personal Training Session">
         </a>
         <div class="card-body">
           <h3 class="h5">Personal Training</h3>
@@ -144,4 +144,5 @@
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
