--- a/trainers.html
+++ b/trainers.html
@@ -47,7 +47,7 @@
     <!-- Sarah -->
     <div class="carousel-item active">
       <a href="trainers.html#sarah">
-        <img src="trainer1.PNG" class="d-block w-100 rounded" alt="Trainer A demonstrating workout">
+        <img src="trainer1.png" class="d-block w-100 rounded" alt="Trainer A demonstrating workout">
       </a>
       <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-2">
         <h5>Sarah — Yoga & Mobility</h5>
@@ -58,7 +58,7 @@
     <!-- Maya -->
     <div class="carousel-item">
       <a href="trainers.html#maya">
-        <img src="trainer2.PNG" class="d-block w-100 rounded" alt="Trainer C dancing">
+        <img src="trainer2.png" class="d-block w-100 rounded" alt="Trainer C dancing">
       </a>
       <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-2">
         <h5>Maya — Zumba & Dance Fitness</h5>
@@ -69,7 +69,7 @@
     <!-- Omar -->
     <div class="carousel-item">
       <a href="trainers.html#omar">
-        <img src="trainer3.PNG" class="d-block w-100 rounded" alt="Trainer B coaching a class">
+        <img src="trainer3.png" class="d-block w-100 rounded" alt="Trainer B coaching a class">
       </a>
       <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-2">
         <h5>Omar — HIIT & Strength</h5>
@@ -166,3 +166,4 @@
 </body>
 
 </html>
+
