--- a/trainers.html
+++ b/trainers.html
@@ -100,7 +100,7 @@
       <!-- Sarah (Yoga) -->
       <div class="col-md-4">
         <div class="card h-100 border-0 shadow-sm" style="background-color:#CDE8C9; transition: transform 0.3s;">
-          <img src="images/trainer1.PNG" class="card-img-top" alt="Sarah portrait">
+          <img src="trainer1.png" class="card-img-top" alt="Sarah portrait">
           <div class="card-body text-center">
             <h5 class="card-title">Sarah</h5>
             <p class="card-text small">Yoga instructor • 5 years teaching</p>
@@ -115,7 +115,7 @@
       <!-- Maya (Zumba) -->
       <div class="col-md-4">
         <div class="card h-100 border-0 shadow-sm" style="background-color:#FFF3B0; transition: transform 0.3s;">
-          <img src="images/trainer2.PNG" class="card-img-top" alt="Maya portrait">
+          <img src="trainer2.png" class="card-img-top" alt="Maya portrait">
           <div class="card-body text-center">
             <h5 class="card-title">Maya</h5>
             <p class="card-text small">Dance fitness • Zumba certified</p>
@@ -130,7 +130,7 @@
       <!-- Omar (Personal Training) -->
       <div class="col-md-4">
         <div class="card h-100 border-0 shadow-sm" style="background-color:#CDE8FF; transition: transform 0.3s;">
-          <img src="images/trainer3.PNG" class="card-img-top" alt="Omar portrait">
+          <img src="trainer3.png" class="card-img-top" alt="Omar portrait">
           <div class="card-body text-center">
             <h5 class="card-title">Omar</h5>
             <p class="card-text small">Strength & conditioning coach • NASM</p>
@@ -166,4 +166,5 @@
 </body>
 
 </html>
+
 
