--- a/index.html
+++ b/index.html
@@ -1,22 +1,16 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>PulseFit Studio — Home</title>
-
-  <!-- Bootstrap 5 CSS (CDN) -->
+  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>PulseFit Studio — Trainers</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-  <!-- Google Font (open license) -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-
   <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-  <!-- NAV -->
-  <!-- NAV -->
+ <!-- NAV -->
 <nav class="navbar navbar-expand-lg shadow-sm" style="background-color: #CDE8C9;" aria-label="Main navigation">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center" href="index.html">
@@ -42,89 +36,101 @@
 </nav>
 
 
-  <!-- HERO -->
-<header class="py-5" style="background-color: #B3E5FC;">
-  <div class="container d-md-flex align-items-center gap-4">
-    <div class="flex-grow-1">
-      <h1 class="display-6 fw-bold text-dark">Get stronger. Move better. Feel great.</h1>
-      <p class="lead text-dark">
-        PulseFit Studio: yoga, zumba, HIIT and personal training in a friendly, supportive space.
-      </p>
-      <a href="register.html" class="btn btn-primary btn-lg me-2">Book a free trial</a>
-      <a href="schedule.html" class="btn btn-outline-dark btn-lg">See schedule</a>
+  <main class="container py-5">
+    <h1 class="h4">Our Trainers</h1>
+    <p class="text-muted">Certified professionals ready to help you reach your goals.</p>
+
+    <!-- Carousel of featured trainers -->
+   <div id="trainerCarousel" class="carousel slide mb-5" data-bs-ride="carousel" aria-label="Featured trainers">
+  <div class="carousel-inner">
+
+    <!-- Sarah -->
+    <div class="carousel-item active">
+      <a href="trainers.html#sarah">
+        <img src="trainers1.PNG" class="d-block w-100 rounded" alt="Trainer A demonstrating workout">
+      </a>
     </div>
 
-    <div aria-hidden="true" class="hero-image mt-4 mt-md-0">
-      <img src="assets/images/hero-sample.jpg" alt="" class="img-fluid rounded shadow" />
+    <!-- Maya -->
+    <div class="carousel-item">
+      <a href="trainers.html#maya">
+        <img src="trainers2.PNG" class="d-block w-100 rounded" alt="Trainer C dancing">
+      </a>
+	  </div>
+	
+    <!-- Omar -->
+    <div class="carousel-item">
+      <a href="trainers.html#omar">
+        <img src="trainers3.PNG" class="d-block w-100 rounded" alt="Trainer B coaching a class">
+      </a>
+	  </div>
+
+  </div>
+
+  <!-- Controls -->
+  <button class="carousel-control-prev" type="button" data-bs-target="#trainerCarousel" data-bs-slide="prev" aria-label="Previous trainer">
+    <span class="carousel-control-prev-icon"></span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#trainerCarousel" data-bs-slide="next" aria-label="Next trainer">
+    <span class="carousel-control-next-icon"></span>
+  </button>
+</div>
+
+    <!-- Trainer cards -->
+    <div class="row g-4">
+      <!-- Trainer card example -->
+<main class="py-5" style="background-color:#E3F2FD;"> 
+  <div class="container">
+    <div class="row g-4">
+
+      <!-- Sarah (Yoga) -->
+      <div class="col-md-4">
+        <div class="card h-100 border-0 shadow-sm" style="background-color:#CDE8C9; transition: transform 0.3s;">
+          <img src="trainer1.PNG" class="card-img-top" alt="Sarah portrait">
+          <div class="card-body text-center">
+            <h5 class="card-title">Sarah</h5>
+            <p class="card-text small">Yoga instructor • 5 years teaching</p>
+            <p class="card-text">Focus on mobility, beginner-friendly flows and breathwork.</p>
+          </div>
+          <div class="card-footer bg-transparent text-center">
+            <a href="register.html" class="btn btn-sm btn-primary" aria-label="Book Sarah">Book a trial</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Maya (Zumba) -->
+      <div class="col-md-4">
+        <div class="card h-100 border-0 shadow-sm" style="background-color:#FFF3B0; transition: transform 0.3s;">
+          <img src="trainer2.PNG" class="card-img-top" alt="Maya portrait">
+          <div class="card-body text-center">
+            <h5 class="card-title">Maya</h5>
+            <p class="card-text small">Dance fitness • Zumba certified</p>
+            <p class="card-text">High energy classes that combine cardio & coordination.</p>
+          </div>
+          <div class="card-footer bg-transparent text-center">
+            <a href="register.html" class="btn btn-sm btn-primary">Book a trial</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Omar (Personal Training) -->
+      <div class="col-md-4">
+        <div class="card h-100 border-0 shadow-sm" style="background-color:#CDE8FF; transition: transform 0.3s;">
+          <img src="trainer3.PNG" class="card-img-top" alt="Omar portrait">
+          <div class="card-body text-center">
+            <h5 class="card-title">Omar</h5>
+            <p class="card-text small">Strength & conditioning coach • NASM</p>
+            <p class="card-text">Specialist in progressive strength training and technique coaching.</p>
+          </div>
+          <div class="card-footer bg-transparent text-center">
+            <a href="register.html" class="btn btn-sm btn-primary">Book a trial</a>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
-</header>
-
-  <!-- Programs -->
-  <!-- Programs -->
-<section class="container py-5">
-  <h2 class="h4 fw-semibold">Our Programs</h2>
-  <p class="text-muted">Choose a program that fits your goals — from group classes to 1-on-1 coaching.</p>
-
-  <!-- Tambah baris grid -->
-  <div class="row g-4"> <!-- g-4 = jarak antara kad -->
-    
-    <section class="container my-5" id="trainers">
-  <h2 class="text-center mb-4">Our Programs</h2>
-  <div class="row g-4">
-    
-    <div class="col-md-4">
-      <div class="card yoga-card h-100">
-        <a href="trainers.html">
-          <img src="yoga.png" class="img-fluid rounded" alt="Yoga class">
-        </a>
-        <div class="card-body">
-          <h3 class="h5">Yoga</h3>
-          <p class="small text-muted">Gentle & dynamic classes to increase mobility, reduce stress, and improve posture.</p>
-          <p><span class="badge bg-light text-dark">Beginner-friendly</span></p>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-4">
-      <div class="card zumba-card h-100">
-        <a href="trainers.html">
-          <img src="zumba.png" class="img-fluid rounded" alt="Zumba Dance Class">
-        </a>
-        <div class="card-body">
-          <h3 class="h5">Zumba</h3>
-          <p class="small text-muted">High-energy dance fitness to boost cardio and have fun.</p>
-          <p><span class="badge bg-light text-dark">Group sessions</span></p>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-4">
-      <div class="card pt-card h-100">
-        <a href="trainers.html">
-          <img src="personal-training.png" class="img-fluid rounded" alt="Personal Training Session">
-        </a>
-        <div class="card-body">
-          <h3 class="h5">Personal Training</h3>
-          <p class="small text-muted">Tailored training plans and technique coaching with our certified trainers.</p>
-          <p><span class="badge bg-light text-dark">1-on-1</span></p>
-        </div>
-      </div>
-    </div>
-
-  </div> <!-- /row -->
-</section>
-
-  <!-- Highlight Trainers -->
-  <section class="py-4 border-top" style="background-color: #B3E5FC;">
-  <div class="container d-flex justify-content-between align-items-center">
-    <div>
-      <h3 class="h6 mb-0 text-dark">Meet our trainers</h3>
-      <p class="small mb-0 text-dark">Professional, certified and friendly.</p>
-    </div>
-    <a href="trainers.html" class="btn btn-outline-dark">View profiles</a>
-  </div>
-</section>
+</main>
 
 
   <!-- Footer -->
@@ -144,5 +150,4 @@
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
