--- a/schedule.html
+++ b/schedule.html
@@ -92,7 +92,7 @@
       </table>
     </div>
 
-    <p class="small text-muted mt-3">Note: Schedule subject to change — check with reception for last-minute updates.</p>
+   <p class="small text-white mt-3">Note: Schedule subject to change — check with reception for last-minute updates.</p>
     <a href="register.html" class="btn btn-primary mt-2">Book a trial class</a>
   </main>
 
