--- a/trainers.html
+++ b/trainers.html
@@ -47,37 +47,23 @@
     <!-- Sarah -->
     <div class="carousel-item active">
       <a href="trainers.html#sarah">
-        <img src="trainer1.png" class="d-block w-100 rounded" alt="Trainer A demonstrating workout">
+        <img src="trainers1.PNG" class="d-block w-100 rounded" alt="Trainer A demonstrating workout">
       </a>
-      <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-2">
-        <h5>Sarah — Yoga & Mobility</h5>
-        <p class="mb-0">Focus on posture & breathing. RM 20 per hour</p>
-      </div>
     </div>
 
     <!-- Maya -->
     <div class="carousel-item">
       <a href="trainers.html#maya">
-        <img src="trainer2.png" class="d-block w-100 rounded" alt="Trainer C dancing">
+        <img src="trainers2.PNG" class="d-block w-100 rounded" alt="Trainer C dancing">
       </a>
-      <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-2">
-        <h5>Maya — Zumba & Dance Fitness</h5>
-        <p class="mb-0">Fun-filled dance workouts that make fitness feel like a party! RM 15 per hour</p>
-      </div>
-    </div>
+	  </div>
 	
     <!-- Omar -->
     <div class="carousel-item">
       <a href="trainers.html#omar">
-        <img src="trainer3.png" class="d-block w-100 rounded" alt="Trainer B coaching a class">
+        <img src="trainers3.PNG" class="d-block w-100 rounded" alt="Trainer B coaching a class">
       </a>
-      <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-2">
-        <h5>Omar — HIIT & Strength</h5>
-        <p class="mb-0">Strength coach with sports science background. RM 25 per hour</p>
-      </div>
-    </div>
-
-    
+	  </div>
 
   </div>
 
@@ -100,7 +86,7 @@
       <!-- Sarah (Yoga) -->
       <div class="col-md-4">
         <div class="card h-100 border-0 shadow-sm" style="background-color:#CDE8C9; transition: transform 0.3s;">
-          <img src="trainer1.png" class="card-img-top" alt="Sarah portrait">
+          <img src="trainer1.PNG" class="card-img-top" alt="Sarah portrait">
           <div class="card-body text-center">
             <h5 class="card-title">Sarah</h5>
             <p class="card-text small">Yoga instructor • 5 years teaching</p>
@@ -115,7 +101,7 @@
       <!-- Maya (Zumba) -->
       <div class="col-md-4">
         <div class="card h-100 border-0 shadow-sm" style="background-color:#FFF3B0; transition: transform 0.3s;">
-          <img src="trainer2.png" class="card-img-top" alt="Maya portrait">
+          <img src="trainer2.PNG" class="card-img-top" alt="Maya portrait">
           <div class="card-body text-center">
             <h5 class="card-title">Maya</h5>
             <p class="card-text small">Dance fitness • Zumba certified</p>
@@ -130,7 +116,7 @@
       <!-- Omar (Personal Training) -->
       <div class="col-md-4">
         <div class="card h-100 border-0 shadow-sm" style="background-color:#CDE8FF; transition: transform 0.3s;">
-          <img src="trainer3.png" class="card-img-top" alt="Omar portrait">
+          <img src="trainer3.PNG" class="card-img-top" alt="Omar portrait">
           <div class="card-body text-center">
             <h5 class="card-title">Omar</h5>
             <p class="card-text small">Strength & conditioning coach • NASM</p>
@@ -164,7 +150,4 @@
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
-
-
